--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,7 @@ jobs:
     - run: ./gradlew build assembleAndroidTest # "build" includes lint and test.
     - uses: actions/upload-artifact@v1
       with:
+        name: app-debug
         path: app/build/outputs/apk/debug/app-debug.apk
     - uses: actions/upload-artifact@v1
       with:
