--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,3 +25,14 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
       if: always()
+  firebase:
+    needs: build
+    runs-on: ubuntu-18.04
+    steps:
+      - uses: actions/checkout@v1
+      - uses: actions/download-artifact@v1
+        with:
+          name: app-debug
+      - uses: actions/download-artifact@v1
+        with:
+          name: app-debug-androidTest
