--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,7 @@ jobs:
       if: always()
   firebase:
     needs: build
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
       - uses: actions/download-artifact@v1
@@ -35,3 +36,7 @@ jobs:
       - uses: actions/download-artifact@v1
         with:
           name: app-debug-androidTest
+      - uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
+        with:
+          version: '285.0.0'
+          service_account_key: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_PRIVATE_KEY_BASE64 }}
