--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ jobs:
     - uses: actions/setup-java@v1
       with:
         java-version: 1.8
-    - run: ./gradlew buildDebug assembleDebugAndroidTest # "build" includes lint and test.
+    - run: ./gradlew build assembleDebugAndroidTest # "build" includes lint and test.
     - uses: actions/upload-artifact@v1
       with:
         name: app-debug
