--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,3 +40,4 @@ jobs:
         with:
           service_account_key: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_PRIVATE_KEY_BASE64 }}
       - run: gcloud config set project ${{ secrets.FIREBASE_PROJECT_ID }}
+      - run: gcloud firebase test android run --type instrumentation --app app-debug/app-debug.apk --test app-debug-androidTest/app-debug-androidTest.apk　--device model=flame
