--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -28,6 +28,9 @@ jobs:
       - uses: actions/download-artifact@v1
         with:
           name: app-debug-androidTest
+      - run: echo $GOOGLE_SERVICES_JSON > app/google-services.json
+        env:
+          GOOGLE_SERVICES_JSON: ${{ secrets.GOOGLE_SERVICES_JSON }}
       - uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
         with:
           service_account_key: ${{ secrets.SERVICE_ACCOUNT_KEY_BASE64 }}
