--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -29,6 +29,7 @@ jobs:
       with:
         appId: ${{ secrets.FIREBASE_APP_ID }}
         token: ${{ secrets.FIREBASE_TOKEN }}
+        groups: testers
         file: app/build/outputs/apk/release/app-release-unsigned.apk
   firebase:
     needs: build
