--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -7,31 +7,42 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - uses: actions/setup-java@v1
-      with:
-        java-version: 1.8
-    - run: ./gradlew build assembleDebugAndroidTest # "build" includes lint and test.
-    - uses: actions/upload-artifact@v2
-      with:
-        name: app-debug
-        path: app/build/outputs/apk/debug/app-debug.apk
-    - uses: actions/upload-artifact@v2
-      with:
-        name: app-debug-androidTest
-        path: app/build/outputs/apk/androidTest/debug/app-debug-androidTest.apk
-    - run: ./gradlew assembleRelease
-    - uses: actions/upload-artifact@v2
-      with:
-        name: app-release-unsigned
-        path: app/build/outputs/apk/release/app-release-unsigned.apk
-    - uses: wzieba/Firebase-Distribution-Github-Action@v1
-      with:
-        appId: ${{ secrets.FIREBASE_APP_ID }}
-        token: ${{ secrets.FIREBASE_TOKEN }}
-        groups: testers
-        file: app/build/outputs/apk/release/app-release-unsigned.apk
-  firebase:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+      - run: echo $GOOGLE_SERVICES_JSON > app/google-services.json
+        env:
+          GOOGLE_SERVICES_JSON: ${{ secrets.GOOGLE_SERVICES_JSON }}
+      - run: ./gradlew build assembleDebugAndroidTest # "build" includes lint and test.
+      - run: ./gradlew assembleRelease
+      - uses: actions/upload-artifact@v2
+        with:
+          name: app-debug
+          path: app/build/outputs/apk/debug/app-debug.apk
+      - uses: actions/upload-artifact@v2
+        with:
+          name: app-debug-androidTest
+          path: app/build/outputs/apk/androidTest/debug/app-debug-androidTest.apk
+      - uses: actions/upload-artifact@v2
+        with:
+          name: app-release-unsigned
+          path: app/build/outputs/apk/release/app-release-unsigned.apk
+  firebase-app-distribution:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/download-artifact@v2
+        with:
+          name: app-release-unsigned
+      - uses: wzieba/Firebase-Distribution-Github-Action@v1
+        with:
+          appId: ${{ secrets.FIREBASE_APP_ID }}
+          token: ${{ secrets.FIREBASE_TOKEN }}
+          groups: testers
+          file: app/build/outputs/apk/release/app-release-unsigned.apk
+  firebase-test-labs:
     needs: build
     runs-on: ubuntu-latest
     steps:
@@ -42,9 +53,6 @@ jobs:
       - uses: actions/download-artifact@v2
         with:
           name: app-debug-androidTest
-      - run: echo $GOOGLE_SERVICES_JSON > app/google-services.json
-        env:
-          GOOGLE_SERVICES_JSON: ${{ secrets.GOOGLE_SERVICES_JSON }}
       - uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
         with:
           service_account_key: ${{ secrets.SERVICE_ACCOUNT_KEY_BASE64 }}
