--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -53,6 +53,7 @@ jobs:
       - uses: actions/download-artifact@v2
         with:
           name: app-debug-androidTest
+      - run: ls -R
       - uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
         with:
           service_account_key: ${{ secrets.SERVICE_ACCOUNT_KEY_BASE64 }}
