--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -36,7 +36,7 @@ jobs:
       - uses: actions/download-artifact@v2
         with:
           name: app-debug-androidTest
-      - run: ls -R
+      - run: ls -R # optional
       - uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
         with:
           service_account_key: ${{ secrets.SERVICE_ACCOUNT_KEY_BASE64 }}
@@ -57,7 +57,7 @@ jobs:
       - uses: actions/download-artifact@v2
         with:
           name: app-release-unsigned
-      - run: ls -R
+      - run: ls -R # optional
       - uses: wzieba/Firebase-Distribution-Github-Action@v1
         with:
           appId: ${{ secrets.FIREBASE_APP_ID }}
