--- a/.github/workflows/danger.yaml
+++ b/.github/workflows/danger.yaml
@@ -1,8 +1,8 @@
 on:
   push:
-    branches: [master, pull_request]
+    branches: [master, develop]
   pull_request:
-    branches: [master, pull_request]
+    branches: [master, develop]
 
 jobs:
   build:
