--- a/.github/workflows/danger.yaml
+++ b/.github/workflows/danger.yaml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/setup-java@v1
         with:
           java-version: 1.8
-      - run: ./gradlew build # "build" includes lint and test.
+      - run: ./gradlew ktlintCheck
       - uses: danger/danger-js@9.1.8
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
