--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        kotlin_version = '1.3.72'
+        kotlin_version = '1.4.0'
     }
 
     repositories {
@@ -14,10 +14,23 @@ buildscript {
     }
 }
 
+plugins {
+    id 'org.jlleitschuh.gradle.ktlint' version '9.3.0'
+}
+
 allprojects {
     repositories {
         google()
         jcenter()
+    }
+}
+
+subprojects {
+    apply plugin: 'org.jlleitschuh.gradle.ktlint'
+
+    ktlint {
+        debug = true
+        android = true
     }
 }
 
