--- a/.github/workflows/danger.yaml
+++ b/.github/workflows/danger.yaml
@@ -17,3 +17,4 @@ jobs:
       - uses: danger/danger-js@9.1.8
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          DANGER_DISABLE_TRANSPILATION: true
