--- a/.github/workflows/danger.yaml
+++ b/.github/workflows/danger.yaml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/setup-java@v1
         with:
           java-version: 1.8
-      - run: ./gradlew ktlintCheck
+      # - run: ./gradlew ktlintCheck
       - run: yarn add danger-plugin-ktlint-report
       - uses: danger/danger-js@9.1.8
         env:
