--- a/build.gradle
+++ b/build.gradle
@@ -29,8 +29,15 @@ subprojects {
     apply plugin: 'org.jlleitschuh.gradle.ktlint'
 
     ktlint {
-        debug = true
         android = true
+        reporters {
+            reporter(org.jlleitschuh.gradle.ktlint.reporter.ReporterType.CHECKSTYLE)
+        }
+        ignoreFailures = true // prevents the build from failing by warnings from ktlint.
+        /*
+         * Unless explicitly specified, fields default to the following:
+         * https://github.com/JLLeitschuh/ktlint-gradle/blob/master/plugin/src/main/kotlin/org/jlleitschuh/gradle/ktlint/KtlintExtension.kt
+         */
     }
 }
 
