--- a/.github/workflows/danger.yaml
+++ b/.github/workflows/danger.yaml
@@ -20,3 +20,4 @@ jobs:
       - run: danger
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          DANGER_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }} // necessary only if you use a bot account.
