--- a/.github/workflows/danger.yaml
+++ b/.github/workflows/danger.yaml
@@ -19,5 +19,4 @@ jobs:
       - run: ./gradlew ktlintCheck
       - run: danger
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          DANGER_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }} // necessary only if you use a bot account.
+          DANGER_GITHUB_API_TOKEN: ${{ secrets.DANGER_GITHUB_API_TOKEN }} // Alternatively, ${{ secrets.GITHUB_TOKEN }}
