--- a/.github/workflows/danger.yaml
+++ b/.github/workflows/danger.yaml
@@ -1,6 +1,4 @@
-on:
-  pull_request:
-    branches: [master, develop]
+on: pull_request
 
 jobs:
   build:
@@ -19,4 +17,4 @@ jobs:
       - run: ./gradlew ktlintCheck
       - run: danger
         env:
-          DANGER_GITHUB_API_TOKEN: ${{ secrets.DANGER_GITHUB_API_TOKEN }} # Alternatively, ${{ secrets.GITHUB_TOKEN }}
+          DANGER_GITHUB_API_TOKEN: ${{ secrets.DANGER_GITHUB_API_TOKEN }} # Instead, use ${{ secrets.GITHUB_TOKEN }} if you don't have to use a bot.
