--- a/.github/workflows/danger.yaml
+++ b/.github/workflows/danger.yaml
@@ -11,10 +11,10 @@ jobs:
       - uses: actions/setup-ruby@v1
         with:
           ruby-version: 2.7
+      - run: ./gradlew ktlintCheck
       - run: |
           gem install bundler
           bundle install
-      - run: ./gradlew ktlintCheck
-      - run: danger
+          danger
         env:
           DANGER_GITHUB_API_TOKEN: ${{ secrets.DANGER_GITHUB_API_TOKEN }} # Instead, use ${{ secrets.GITHUB_TOKEN }} if you don't have to use a bot.
