--- a/.github/workflows/firebase-and-slack.yaml
+++ b/.github/workflows/firebase-and-slack.yaml
@@ -1,6 +1,9 @@
 on:
   push:
-    branches: [master, develop]
+    branches:
+      - master
+      - develop
+      - 'feature/**'
 
 jobs:
   build:
