--- a/.github/workflows/danger.yaml
+++ b/.github/workflows/danger.yaml
@@ -17,4 +17,7 @@ jobs:
           bundle install
           danger
         env:
-          DANGER_GITHUB_API_TOKEN: ${{ secrets.DANGER_GITHUB_API_TOKEN }} # Instead, use ${{ secrets.GITHUB_TOKEN }} if you don't have to use a bot.
+          # Use the following if you want a bot account comment on the pull request.
+          DANGER_GITHUB_API_TOKEN: ${{ secrets.DANGER_GITHUB_API_TOKEN }} // A bot account's personal access token that has full access to repo.
+          # Otherwise, use the following.
+          # DANGER_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
