--- a/.github/workflows/danger.yaml
+++ b/.github/workflows/danger.yaml
@@ -15,7 +15,7 @@ jobs:
       - run: |
           gem install bundler
           bundle install
-          danger
+      - run: danger
         env:
           # Use the following if you want a bot account.
           DANGER_GITHUB_API_TOKEN: ${{ secrets.DANGER_GITHUB_API_TOKEN }} // A bot account's personal access token that has full access to repo.
