--- a/.github/workflows/danger.yml
+++ b/.github/workflows/danger.yml
@@ -18,6 +18,6 @@ jobs:
       - run: danger
         env:
           # Use the following if you want a bot account.
-          DANGER_GITHUB_API_TOKEN: ${{ secrets.DANGER_GITHUB_API_TOKEN }} // A bot account's personal access token that has full access to repo.
+          # DANGER_GITHUB_API_TOKEN: ${{ secrets.DANGER_GITHUB_API_TOKEN }} // A bot account's personal access token that has full access to repo.
           # Otherwise, use the following.
-          # DANGER_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          DANGER_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
